Fixed experience tab layout. Still need to fix whitespace and other small spacing issues.

--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ a.nav-link{
 ──────────────────*/
 
 #projects{
-	margin-top:20px;
+	margin-top:0px;
     height: 100%;
 	display: flex;
 	flex-direction: column;
@@ -238,19 +238,17 @@ a.nav-link{
       Experience
 ──────────────────*/
 
-#contact{
+#experience{
 	margin: auto;
-	padding-bottom: 25px;
-	height: 475px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 	color: var(--main-fonts-color);
-	background: var(--main-background);
+
 }
 
-#contact a{
+#experience a{
     margin: 5px;
 	font-size:1.2rem;
     text-decoration: underline;
@@ -260,8 +258,7 @@ a.nav-link{
 	border-bottom: 1px --main-decor-color;
 }
 
-#contact p{
-	padding:0px;
+#experience p{
 	text-align:center;
 	font-size:1.2rem;
 	font-family: var(--main-font-family);
@@ -407,3 +404,52 @@ hr {
   }
 }
 
+
+.wrapper {
+	padding: 5px;
+	max-width: 960px;
+	width: 95%;
+	color: white;
+	margin: 20px auto;
+}
+header {
+	padding: 0 15px;
+}
+
+.columns {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+	margin: 5px 0;
+}
+
+.column {
+	flex: 1;
+	
+	margin: 2px;
+	padding: 10px;
+	&:first-child { margin-left: 0; }
+	&:last-child { margin-right: 0; }
+	
+}
+
+@media screen and (max-width: 980px) {
+  .columns .column {
+		margin-bottom: 5px;
+    flex-basis: 40%;
+		&:nth-last-child(2) {
+			margin-right: 0;
+		}
+		&:last-child {
+			flex-basis: 100%;
+			margin: 0;
+		}
+	}
+}
+
+@media screen and (max-width: 680px) {
+	.columns .column {
+		flex-basis: 100%;
+		margin: 0 0 5px 0;
+	}
+}
